# tatl

./: .gitignore  README.md  meson.build  meson_options.txt
.github/workflows/: check.yaml
examples/: addition.c  macro.c  meson.build
include/: meson.build
include/tatl/: context.h  macros.h  meson.build  tatl.h
include/tatl/context/: get.h  meson.build  set.h
src/: context.c  meson.build
src/context/: get.c  meson.build  set.c
tests/: meson.build
tests/tatl/: meson.build  test.c
